# longhair

./: .gitignore  CMakeLists.txt  Makefile  README.md  SiameseTools.h  cauchy_256.cpp  cauchy_256.h  cauchy_tables_256.inc  gf256.cpp  gf256.h
docs/: heatmap.gnu  heatmap.txt
include/: cauchy_256.h  rainbow.h
longhair-mobile/: BitMath.cpp  BitMath.hpp  Makefile  MemSwap.cpp  MemSwap.hpp  MemXOR.cpp  MemXOR.hpp  Platform.hpp  README.md  cauchy_256.cpp  cauchy_256.h
proj/: longhair_win32.sln  longhair_win32.vcxproj  longhair_win32.vcxproj.filters
src/: cauchy.cpp  cauchy_256.cpp  rainbow.cpp
tests/: Longhair.sln  LonghairLibrary.vcxproj  LonghairLibrary.vcxproj.filters  LonghairTest.vcxproj  LonghairTest.vcxproj.filters  SiameseTools.h  cauchy_256_tests.cpp
tests/jerasure/: Makefile  cauchy.h  cauchy_03.c  jerasure.h
